final project submission

--- a/project_1/index.html
+++ b/project_1/index.html
@@ -3,13 +3,27 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width" initial-scale=1>
         <title>First Project</title>
         <meta name="description" content="My first project for html css javascript for web developers course.">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="css/stylesheet.css">
     </head>
     <body>
-        <p>hello<br><h1>This is great #2</h1></p>
-
-        
+            <h1>Menu</h1>
+            <div class="row">
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <p class="title_chicken">Chicken</p>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec elit nec risus blandit rhoncus ac sit amet metus. Sed a dolor lectus. Suspendisse id est orci. Etiam eget tortor eu est ullamcorper ultricies. Morbi in dolor nibh. Aenean elementum, magna vitae facilisis vestibulum, odio lectus rhoncus turpis, nec auctor sapien dolor quis neque. Aliquam erat volutpat. Curabitur tristique lectus a massa blandit, facilisis mollis turpis efficitur. Cras consectetur lacinia maximus. Aenean imperdiet, odio ac pretium sagittis </p>
+                </div>
+                <div class="col-lg-3 col-md-2 col-sm-1">
+                    <p class="title_beef">Beef</p>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec elit nec risus blandit rhoncus ac sit amet metus. Sed a dolor lectus. Suspendisse id est orci. Etiam eget tortor eu est ullamcorper ultricies. Morbi in dolor nibh. Aenean elementum, magna vitae facilisis vestibulum, odio lectus rhoncus turpis, nec auctor sapien dolor quis neque. Aliquam erat volutpat. Curabitur tristique lectus a massa blandit, facilisis mollis turpis efficitur. Cras consectetur lacinia maximus. Aenean imperdiet, odio ac pretium sagittis, </p>
+                </div>
+                <div class="col-lg-3 col-md-1 col-sm-1">
+                    <p class="title_sushi">Sushi</p>
+                    <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec elit nec risus blandit rhoncus ac sit amet metus. Sed a dolor lectus. Suspendisse id est orci. Etiam eget tortor eu est ullamcorper ultricies. Morbi in dolor nibh. Aenean elementum, magna vitae facilisis vestibulum, odio lectus rhoncus turpis, nec auctor sapien dolor quis neque. Aliquam erat volutpat. Curabitur tristique lectus a massa blandit, facilisis mollis turpis efficitur. Cras consectetur lacinia maximus. Aenean imperdiet, odio ac pretium sagittis, </p>
+                </div>
+            </div>
+            <div> </div>
     </body>
 </html>
